--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Activity titles -->
     <string name="title_activity_sign_up">Kaydol</string>
     <string name="title_activity_sign_in">Giriş Yap</string>
+    <string name="title_activity_home">HomeActivity</string>
 
     <!-- Permissions -->
     <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
@@ -12,6 +13,7 @@
     <string name="label_select_picture">Select Picture</string>
     <string name="label_or">veya</string>
     <string name="label_TOS">Giriş yaparak hizmet şartlarını kabul etmiş olursunuz.</string>
+    <string name="label_search_text">YOLOO\'da Ara</string>
 
     <!-- Prompts -->
     <string name="prompt_email">E-posta</string>
@@ -38,5 +40,14 @@
     <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
     <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
     <string name="toast_unexpected_error">Unexpected error</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- Widgets -->
+    <string name="just_now">Just Now</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
